--- a/css/app.css
+++ b/css/app.css
@@ -19,6 +19,13 @@ body {
  height:100%;
  width:100%
 }
+.download {
+ position:  absolute;
+ text-decoration:  none;
+ color:  #fff;
+ right:  30px;
+ top: 10px;
+}
 .page[data-v-a4e9d902] {
  background:#fff;
  position:relative;
